New template madafaka

--- a/index.html
+++ b/index.html
@@ -649,8 +649,10 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
-                <h1 class="contact-heading">Lets Get In Touch</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum illum ratione atque praesentium laudantium quaerat laborum consecteturLorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h1 class="contact-heading">Vamos nos conhecer?</h1>
+                <p>
+                    Não se acanhe! Estamos ansiosos para conhecer o quão especial é o seu negócio! Queremos ver você crescer e o primeiro contato é só o primeiro passo dessa jornada.
+                </p>
 
                 <div class="row margin-15px-bottom">
                     <div class="col-sm-1 no-padding">
@@ -659,7 +661,7 @@
                         </div>
                     </div>
                     <div class="col-sm-11">
-                        <p class="text-small">San Francisco, CA 560 Bush St &amp; 20th Ave,<br> Apt 5 San Francisco, 230909</p>
+                        <p class="text-small">São José, SC | Manoel Rosa 116 &amp; Avenida das Torres,<br> AP304 BL3 | CEP 88113-835</p>
                     </div>
                 </div>
 
@@ -670,7 +672,7 @@
                         </div>
                     </div>
                     <div class="col-sm-11">
-                        <p class="text-small">+01 2323 7328 322<br>+01 2323 7328 322</p>
+                        <p class="text-small">+55 48 99814 2779<br>+55 48 99967 6020</p>
                     </div>
                 </div>
 
@@ -681,7 +683,7 @@
                         </div>
                     </div>
                     <div class="col-sm-11 xs-margin-50px-bottom">
-                        <p class="text-small">email@demo.com<br>www.demo.com</p>
+                        <p class="text-small">sas.floripa@gmail.com<br>https://sasfln.github.io</p>
                     </div>
                 </div>
 
@@ -695,22 +697,22 @@
                     <!-- Element of the ajax contact form -->
                     <div class="row">
                         <div class="col-md-6 form-group">
-                            <input name="name" type="text" class="form-control" placeholder="Name" required>
+                            <input name="name" type="text" class="form-control" placeholder="Nome" required>
                         </div>
                         <div class="col-md-6 form-group">
                             <input name="email" type="email" class="form-control" placeholder="Email" required>
                         </div>
                         <div class="col-md-6 form-group">
-                            <input name="phone" type="text" class="form-control" placeholder="Phone" required>
+                            <input name="phone" type="text" class="form-control" placeholder="Telefone" required>
                         </div>
                         <div class="col-md-6 form-group">
-                            <input name="subject" type="text" class="form-control" placeholder="Subject" required>
+                            <input name="subject" type="text" class="form-control" placeholder="Assunto" required>
                         </div>
                         <div class="col-12 form-group">
-                            <textarea name="message" class="form-control" rows="3" placeholder="Message" required></textarea>
+                            <textarea name="message" class="form-control" rows="3" placeholder="Mensagem" required></textarea>
                         </div>
                         <div class="col-12">
-                            <input name="submit" type="submit" class="button-style" value="Send Message">
+                            <input name="submit" type="submit" class="button-style" value="Enviar">
                         </div>
                     </div>
 
@@ -721,7 +723,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="alert alert-success contact__msg" style="display: none" role="alert">
-                            Your message was sent successfully.
+                            Sua mensagem foi enviada corretamente!
                         </div>
                     </div>
                 </div>
@@ -744,7 +746,7 @@
                     <a href="#0"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                 </div>
 
-                <p>&copy; 2018 Dejithemes. All Rights Reserved.</p>
+                <p>&copy; 2019 .·.S.A.S.·. Todos os direitos Reservados</p>
             </div>
         </div>
 
