--- a/index.html
+++ b/index.html
@@ -693,23 +693,23 @@
 
             <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
                 <!-- Starting of ajax contact form -->
-                <form class="contact__form" method="post" action="contact_mail.php">
+                <form class="contact__form" method="post" action="https://usebasin.com/f/a79dd3893426">
                     <!-- Element of the ajax contact form -->
                     <div class="row">
                         <div class="col-md-6 form-group">
-                            <input name="name" type="text" class="form-control" placeholder="Nome" required>
+                            <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor, no mínimo 4 letras" required/>
                         </div>
                         <div class="col-md-6 form-group">
-                            <input name="email" type="email" class="form-control" placeholder="Email" required>
+                            <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Este não parece um email válido" required/>
                         </div>
                         <div class="col-md-6 form-group">
-                            <input name="phone" type="text" class="form-control" placeholder="Telefone" required>
+                            <input type="text" class="form-control" name="phone" id="phone" placeholder="Telefone" data-rule="minlen:8" data-msg="Pelo menos 8 dígitos, por favor" required/>
                         </div>
                         <div class="col-md-6 form-group">
-                            <input name="subject" type="text" class="form-control" placeholder="Assunto" required>
+                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Escreve mais um pouquinho" required/>
                         </div>
                         <div class="col-12 form-group">
-                            <textarea name="message" class="form-control" rows="3" placeholder="Mensagem" required></textarea>
+                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Vai lá, escreve pra gente!" placeholder="Mensagem" required></textarea>
                         </div>
                         <div class="col-12">
                             <input name="submit" type="submit" class="button-style" value="Enviar">
@@ -753,19 +753,20 @@
         <div class="curve curve-top curve-center"></div>
     </footer>
 
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/modernizr.custom.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/slick.min.js"></script>
-    <script src="./js/scrollreveal.min.js"></script>
-    <script src="./js/jquery.cubeportfolio.min.js"></script>
-    <script src="./js/jquery.matchHeight-min.js"></script>
-    <script src="./js/masonry.pkgd.min.js"></script>
-    <script src="./js/jquery.flexslider-min.js"></script>
-    <script src="./js/classie.js"></script>
-    <script src="./js/helper.js"></script>
-    <script src="./js/grid3d.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="/js/contactform.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/modernizr.custom.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/slick.min.js"></script>
+    <script src="/js/scrollreveal.min.js"></script>
+    <script src="/js/jquery.cubeportfolio.min.js"></script>
+    <script src="/js/jquery.matchHeight-min.js"></script>
+    <script src="/js/masonry.pkgd.min.js"></script>
+    <script src="/js/jquery.flexslider-min.js"></script>
+    <script src="/js/classie.js"></script>
+    <script src="/js/helper.js"></script>
+    <script src="/js/grid3d.js"></script>
+    <script src="/js/script.js"></script>
 
 
 </body>
