New template madafaka

--- a/index.html
+++ b/index.html
@@ -722,9 +722,13 @@
                 <!-- Starting of successful form message -->
                 <div class="row">
                     <div class="col-12">
-                        <div class="alert alert-success contact__msg" style="display: none" role="alert">
+                        <div id="sendmessage" class="alert alert-success contact__msg" style="display: none" role="alert">
                             Sua mensagem foi enviada corretamente!
                         </div>
+                        <div id="errormessage" class="alert alert-error contact__msg" style="display: none" role="alert">
+                            Epa! Alguma coisa deu errado!
+                        </div>
+
                     </div>
                 </div>
                 <!-- Ending of successful form message -->
