New template madafaka

--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                 </form>
                 <!-- Ending of ajax contact form -->
                 <!-- Starting of successful form message -->
-                <div class="row">
+                <!--<div class="row">
                     <div class="col-12">
                         <div id="sendmessage" class="alert alert-success contact__msg" style="display: none" role="alert">
                             Sua mensagem foi enviada corretamente!
@@ -730,7 +730,7 @@
                         </div>
 
                     </div>
-                </div>
+                </div>-->
                 <!-- Ending of successful form message -->
             </div>
         </div>
