New template madafaka

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                 <div class="col-lg-3 col-md-6 col-sm-12 bottom-space">
                     <div class="folded-corner service_tab_1">
                         <div class="text">
-                            <i class="fa fa-image fa-5x fa-icon-image"></i>
-                            <h3 class="item-title">Criação de Marca</h3>
+                            <i class="fas fa-drafting-compass fa-5x fa-icon-image"></i>
+                            <h3 class="item-title">Branding</h3>
                             <p>
                                 Você tem uma ideia, nós damos vida. Sua marca conta a sua história e ela merece ser contada em todos os detalhes. <br>Vamos criar juntos!
                             </p>
@@ -166,7 +166,7 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-lightbulb-o fa-5x fa-icon-image"></i>
-                            <h3 class="item-title">Desenvolvimento Web</h3>
+                            <h3 class="item-title">Web Dev</h3>
                             <p>
                                 Se a sua empresa não existe na internet, ela não existe para a maior parte dos consumidores. <br>Sua empresa ainda não tem um site?
                             </p>
@@ -177,7 +177,7 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-truck fa-5x fa-icon-image"></i>
-                            <h3 class="item-title">Suporte Técnico</h3>
+                            <h3 class="item-title">Suporte</h3>
                             <p>
                                 O computador e a internet são ferramentas essenciais no mundo atual para uma empresa lucrar. <br>Deixa a gente cuidar disso para você!
                             </p>
