New template madafaka

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/cubeportfolio.min.css">
     <link rel="stylesheet" type="text/css" href="css/component.css" />
+    <script src="https://kit.fontawesome.com/49a6544868.js"></script>
 
 </head>
 
@@ -771,6 +772,7 @@
     <script src="/js/helper.js"></script>
     <script src="/js/grid3d.js"></script>
     <script src="/js/script.js"></script>
+
 
 
 </body>
