--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fas fa-drafting-compass fa-5x fa-icon-image"></i>
-                            <h3 class="item-title">Branding</h3>
+                            <h3 class="item-title"><br>Branding</h3>
                             <p>
                                 Você tem uma ideia, nós damos vida. Sua marca conta a sua história e ela merece ser contada em todos os detalhes. <br>Vamos criar juntos!
                             </p>
@@ -167,7 +167,7 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-lightbulb-o fa-5x fa-icon-image"></i>
-                            <h3 class="item-title">Web Dev</h3>
+                            <h3 class="item-title"><br>Web Dev</h3>
                             <p>
                                 Se a sua empresa não existe na internet, ela não existe para a maior parte dos consumidores. <br>Sua empresa ainda não tem um site?
                             </p>
@@ -178,7 +178,7 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-truck fa-5x fa-icon-image"></i>
-                            <h3 class="item-title">Suporte</h3>
+                            <h3 class="item-title"><br>Suporte</h3>
                             <p>
                                 O computador e a internet são ferramentas essenciais no mundo atual para uma empresa lucrar. <br>Deixa a gente cuidar disso para você!
                             </p>
@@ -189,7 +189,7 @@
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa fa-diamond fa-5x fa-icon-image"></i>
-                            <h3 class="item-title">Gestão de TI</h3>
+                            <h3 class="item-title"><br>Gestão de TI</h3>
                             <p>
                                 Se a sua empresa já cresceu um pouco, você precisa de uma estrutura que dê suporte para aumentar ainda mais. <br>Conte conosco!
                             </p>
@@ -772,8 +772,6 @@
     <script src="/js/helper.js"></script>
     <script src="/js/grid3d.js"></script>
     <script src="/js/script.js"></script>
-
-
 
 </body>
 
