--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-12 bottom-space">
                     <div class="folded-corner service_tab_1">
                         <div class="text">
-                            <i class="fa fa-lightbulb-o fa-5x fa-icon-image"></i>
+                            <i class="far fa-file-code fa-5x fa-icon-image"></i>
                             <h3 class="item-title"><br>Web Dev</h3>
                             <p>
                                 Se a sua empresa não existe na internet, ela não existe para a maior parte dos consumidores. <br>Sua empresa ainda não tem um site?
@@ -177,7 +177,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-12 bottom-space">
                     <div class="folded-corner service_tab_1">
                         <div class="text">
-                            <i class="fa fa-truck fa-5x fa-icon-image"></i>
+                            <i class="fas fa-cogs fa-5x fa-icon-image"></i>
                             <h3 class="item-title"><br>Suporte</h3>
                             <p>
                                 O computador e a internet são ferramentas essenciais no mundo atual para uma empresa lucrar. <br>Deixa a gente cuidar disso para você!
@@ -188,7 +188,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-12 bottom-space">
                     <div class="folded-corner service_tab_1">
                         <div class="text">
-                            <i class="fa fa-diamond fa-5x fa-icon-image"></i>
+                            <i class="fas fa-sitemap fa-5x fa-icon-image"></i>
                             <h3 class="item-title"><br>Gestão de TI</h3>
                             <p>
                                 Se a sua empresa já cresceu um pouco, você precisa de uma estrutura que dê suporte para aumentar ainda mais. <br>Conte conosco!
