New template madafaka

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
                             <i class="fas fa-drafting-compass fa-5x fa-icon-image"></i>
                             <h3 class="item-title"><br>Branding</h3>
                             <p>
-                                Você tem uma ideia, nós damos vida. Sua marca conta a sua história e ela merece ser contada em todos os detalhes. <br>Vamos criar juntos!
+                                Você tem uma ideia, nós damos vida. Sua marca conta a sua história e ela merece ser contada em todos os detalhes.
+                                <p>Vamos criar juntos!</p>
                             </p>
                         </div>
                     </div>
@@ -169,7 +170,8 @@
                             <i class="far fa-file-code fa-5x fa-icon-image"></i>
                             <h3 class="item-title"><br>Web Dev</h3>
                             <p>
-                                Se a sua empresa não existe na internet, ela não existe para a maior parte dos consumidores. <br>Sua empresa ainda não tem um site?
+                                Se a sua empresa não existe na internet, ela não existe para a maior parte dos consumidores.
+                                <p>Sua empresa ainda não tem um site?</p>
                             </p>
                         </div>
                     </div>
@@ -180,7 +182,8 @@
                             <i class="fas fa-cogs fa-5x fa-icon-image"></i>
                             <h3 class="item-title"><br>Suporte</h3>
                             <p>
-                                O computador e a internet são ferramentas essenciais no mundo atual para uma empresa lucrar. <br>Deixa a gente cuidar disso para você!
+                                O computador e a internet são ferramentas essenciais no mundo atual para uma empresa lucrar.
+                                <p>Deixa a gente cuidar disso para você!</p>
                             </p>
                         </div>
                     </div>
@@ -191,7 +194,8 @@
                             <i class="fas fa-sitemap fa-5x fa-icon-image"></i>
                             <h3 class="item-title"><br>Gestão de TI</h3>
                             <p>
-                                Se a sua empresa já cresceu um pouco, você precisa de uma estrutura que dê suporte para aumentar ainda mais. <br>Conte conosco!
+                                Se a sua empresa já cresceu um pouco, você precisa de uma estrutura que dê suporte para aumentar ainda mais.
+                                <p>Conte conosco!</p>
                             </p>
                         </div>
                     </div>
