New template madafaka

--- a/index.html
+++ b/index.html
@@ -750,9 +750,7 @@
                 </a>
 
                 <div class="social">
-                    <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a href="#0"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    <a href="#0"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/SAS-442750003221060"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
                 </div>
 
                 <p>&copy; 2019 .·.S.A.S.·. Todos os direitos Reservados</p>
