New template madafaka

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <h3>Bem vindo à SAS!</h3>
             <h4>quem somos e o que a gente faz</h4>
             <p>
-                Somos uma empresa de TI focada em que movimenta o Brasil de verdade: o pequeno empreendedor. Atuamos na área de TI trabalhando diretamente com as necessidades da pequena empresa e do empreendedor individual. Marketing, web, TI, tudo numa só empresa, para
-                você poder cuidar do que realmente importa: fazer seu negócio crescer.
+                Somos uma empresa de TI focada em quem movimenta o Brasil de verdade: o pequeno empreendedor. Atuamos na área de TI trabalhando diretamente com as necessidades da pequena empresa e do empreendedor individual. Marketing, web, TI, tudo numa só empresa,
+                para você poder cuidar do que realmente importa: fazer seu negócio crescer.
             </p>
         </div>
         <!--        <div class="container">
@@ -137,7 +137,7 @@
                     </div>
                     <div class="col-sm features-section-2-col-2 ">
                         <div class="features-section-2-col-2__content">
-                            <h2>A gente cuida da sua estrutura como se fosse a nossa</h2>
+                            <h2>A gente cuida da sua infraestrutura de TI como se fosse a nossa</h2>
                             <p>
                                 Para você poder guiar o crescimento do seu negócio sem se preocupar se a impressora parou ou se a internet está fora do ar. Deixa isso com a gente!
                             </p>
@@ -183,7 +183,7 @@
                             <h3 class="item-title"><br>Suporte</h3>
                             <p>
                                 O computador e a internet são ferramentas essenciais no mundo atual para uma empresa lucrar.
-                                <p>Deixa a gente cuidar disso para você!</p>
+                                <p>Cuidaremos disso para você!</p>
                             </p>
                         </div>
                     </div>
