--- a/index.html
+++ b/index.html
@@ -218,11 +218,15 @@
         </div>
 
         <div class="grid-wrap">
-            <div class="grid">
-                <figure class="hover-effect"><img src="/img/technologies/bitdefender.jpg" alt="Bitdefender" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/github.jpg" alt="GitHub" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/bootstrap.jpg" alt="Bootstrap" /></figure>
-                <figure class="hover-effect"><img src="/img/technologies/heroku.jpg" alt="Heroku" /></figure>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="grid">
+                        <figure class="hover-effect"><img src="/img/technologies/bitdefender.jpg" alt="Bitdefender" /></figure>
+                        <figure class="hover-effect"><img src="/img/technologies/github.jpg" alt="GitHub" /></figure>
+                        <figure class="hover-effect"><img src="/img/technologies/bootstrap.jpg" alt="Bootstrap" /></figure>
+                        <figure class="hover-effect"><img src="/img/technologies/heroku.jpg" alt="Heroku" /></figure>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- /grid-wrap -->
