--- a/index.html
+++ b/index.html
@@ -695,36 +695,35 @@
 
             </div>
 
-            <div class="container">
-                <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
-                    <!-- Starting of ajax contact form -->
-                    <form class="contact__form" method="post" action="https://usebasin.com/f/a79dd3893426">
-                        <!-- Element of the ajax contact form -->
-                        <div class="row">
-                            <div class="col-md-6 form-group">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor, no mínimo 4 letras" required/>
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Este não parece um email válido" required/>
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <input type="text" class="form-control" name="phone" id="phone" placeholder="Telefone" data-rule="minlen:8" data-msg="Pelo menos 8 dígitos, por favor" required/>
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Escreve mais um pouquinho" required/>
-                            </div>
-                            <div class="col-12 form-group">
-                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Vai lá, escreve pra gente!" placeholder="Mensagem" required></textarea>
-                            </div>
-                            <div class="col-12">
-                                <input name="submit" type="submit" class="button-style" value="Enviar">
-                            </div>
+            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
+                <!-- Starting of ajax contact form -->
+                <form class="contact__form" method="post" action="https://usebasin.com/f/a79dd3893426">
+                    <!-- Element of the ajax contact form -->
+                    <div class="row" style="margin-top: 40px">
+                        <div class="col-md-6 form-group">
+                            <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor, no mínimo 4 letras" required/>
                         </div>
+                        <div class="col-md-6 form-group">
+                            <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Este não parece um email válido" required/>
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <input type="text" class="form-control" name="phone" id="phone" placeholder="Telefone" data-rule="minlen:8" data-msg="Pelo menos 8 dígitos, por favor" required/>
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Escreve mais um pouquinho" required/>
+                        </div>
+                        <div class="col-12 form-group">
+                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Vai lá, escreve pra gente!" placeholder="Mensagem" required></textarea>
+                        </div>
+                        <div class="col-12">
+                            <input name="submit" type="submit" class="button-style" value="Enviar">
+                        </div>
+                    </div>
 
-                    </form>
-                    <!-- Ending of ajax contact form -->
-                    <!-- Starting of successful form message -->
-                    <!--<div class="row">
+                </form>
+                <!-- Ending of ajax contact form -->
+                <!-- Starting of successful form message -->
+                <!--<div class="row">
                     <div class="col-12">
                         <div id="sendmessage" class="alert alert-success contact__msg" style="display: none" role="alert">
                             Sua mensagem foi enviada corretamente!
@@ -735,10 +734,10 @@
 
                     </div>
                 </div>-->
-                    <!-- Ending of successful form message -->
-                </div>
+                <!-- Ending of successful form message -->
             </div>
         </div>
+    </div>
     </div>
     <footer class="text-center pos-re">
         <div class="container">
