New template madafaka

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 
 
     <!--================== Blog section =====================-->
-    <div id="blog" class="blog">
+    <!--<div id="blog" class="blog">
         <div class="container">
             <div class="row">
                 <div class="col-sm">
@@ -643,7 +643,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
     <!--================== Contact section =====================-->
 
