New template madafaka

--- a/index.html
+++ b/index.html
@@ -647,83 +647,83 @@
 
     <!--================== Contact section =====================-->
 
-    <!--<div id="contact" class="contact">
-            <div class="map">
+    <div id="contact" class="contact">
+        <!--<div class="map">
                 <iframe height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=3%20Marina%20road%20Lagos%20Island%20Lagos&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
             </div>-->
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
-                <h1 class="contact-heading">Vamos nos conhecer?</h1>
-                <p>
-                    Não se acanhe! Estamos ansiosos para conhecer o quão especial é o seu negócio! Queremos ver você crescer e o primeiro contato é só o primeiro passo dessa jornada.
-                </p>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
+                    <h1 class="contact-heading">Vamos nos conhecer?</h1>
+                    <p>
+                        Não se acanhe! Estamos ansiosos para conhecer o quão especial é o seu negócio! Queremos ver você crescer e o primeiro contato é só o primeiro passo dessa jornada.
+                    </p>
 
-                <div class="row margin-15px-bottom">
-                    <div class="col-sm-1 no-padding">
-                        <div class="contact-icon text-blue">
-                            <i class="fa fa-map-marker" aria-hidden="true"></i>
+                    <div class="row margin-15px-bottom">
+                        <div class="col-sm-1 no-padding">
+                            <div class="contact-icon text-blue">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <div class="col-sm-11">
+                            <p class="text-small">São José, SC | Manoel Rosa 116 &amp; Avenida das Torres,<br> AP304 BL3 | CEP 88113-835</p>
                         </div>
                     </div>
-                    <div class="col-sm-11">
-                        <p class="text-small">São José, SC | Manoel Rosa 116 &amp; Avenida das Torres,<br> AP304 BL3 | CEP 88113-835</p>
+
+                    <div class="row margin-15px-bottom">
+                        <div class="col-sm-1 no-padding">
+                            <div class="contact-icon text-blue">
+                                <i class="fa fa-phone" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <div class="col-sm-11">
+                            <p class="text-small">+55 48 99814 2779<br>+55 48 99967 6020</p>
+                        </div>
                     </div>
+
+                    <div class="row margin-15px-bottom">
+                        <div class="col-sm-1 no-padding">
+                            <div class="contact-icon text-blue">
+                                <i class="fa fa-globe" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <div class="col-sm-11 xs-margin-50px-bottom">
+                            <p class="text-small">sas.floripa@gmail.com<br>https://sasfln.github.io</p>
+                        </div>
+                    </div>
+
+
                 </div>
 
-                <div class="row margin-15px-bottom">
-                    <div class="col-sm-1 no-padding">
-                        <div class="contact-icon text-blue">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
+                <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
+                    <!-- Starting of ajax contact form -->
+                    <form class="contact__form" method="post" action="https://usebasin.com/f/a79dd3893426">
+                        <!-- Element of the ajax contact form -->
+                        <div class="row" style="margin-top: 40px">
+                            <div class="col-md-6 form-group">
+                                <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor, no mínimo 4 letras" required/>
+                            </div>
+                            <div class="col-md-6 form-group">
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Este não parece um email válido" required/>
+                            </div>
+                            <div class="col-md-6 form-group">
+                                <input type="text" class="form-control" name="phone" id="phone" placeholder="Telefone" data-rule="minlen:8" data-msg="Pelo menos 8 dígitos, por favor" required/>
+                            </div>
+                            <div class="col-md-6 form-group">
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Escreve mais um pouquinho" required/>
+                            </div>
+                            <div class="col-12 form-group">
+                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Vai lá, escreve pra gente!" placeholder="Mensagem" required></textarea>
+                            </div>
+                            <div class="col-12">
+                                <input name="submit" type="submit" class="button-style" value="Enviar">
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-sm-11">
-                        <p class="text-small">+55 48 99814 2779<br>+55 48 99967 6020</p>
-                    </div>
-                </div>
 
-                <div class="row margin-15px-bottom">
-                    <div class="col-sm-1 no-padding">
-                        <div class="contact-icon text-blue">
-                            <i class="fa fa-globe" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                    <div class="col-sm-11 xs-margin-50px-bottom">
-                        <p class="text-small">sas.floripa@gmail.com<br>https://sasfln.github.io</p>
-                    </div>
-                </div>
-
-
-            </div>
-
-            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
-                <!-- Starting of ajax contact form -->
-                <form class="contact__form" method="post" action="https://usebasin.com/f/a79dd3893426">
-                    <!-- Element of the ajax contact form -->
-                    <div class="row" style="margin-top: 40px">
-                        <div class="col-md-6 form-group">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor, no mínimo 4 letras" required/>
-                        </div>
-                        <div class="col-md-6 form-group">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Este não parece um email válido" required/>
-                        </div>
-                        <div class="col-md-6 form-group">
-                            <input type="text" class="form-control" name="phone" id="phone" placeholder="Telefone" data-rule="minlen:8" data-msg="Pelo menos 8 dígitos, por favor" required/>
-                        </div>
-                        <div class="col-md-6 form-group">
-                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Escreve mais um pouquinho" required/>
-                        </div>
-                        <div class="col-12 form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Vai lá, escreve pra gente!" placeholder="Mensagem" required></textarea>
-                        </div>
-                        <div class="col-12">
-                            <input name="submit" type="submit" class="button-style" value="Enviar">
-                        </div>
-                    </div>
-
-                </form>
-                <!-- Ending of ajax contact form -->
-                <!-- Starting of successful form message -->
-                <!--<div class="row">
+                    </form>
+                    <!-- Ending of ajax contact form -->
+                    <!-- Starting of successful form message -->
+                    <!--<div class="row">
                     <div class="col-12">
                         <div id="sendmessage" class="alert alert-success contact__msg" style="display: none" role="alert">
                             Sua mensagem foi enviada corretamente!
@@ -734,10 +734,10 @@
 
                     </div>
                 </div>-->
-                <!-- Ending of successful form message -->
+                    <!-- Ending of successful form message -->
+                </div>
             </div>
         </div>
-    </div>
     </div>
     <footer class="text-center pos-re">
         <div class="container">
