--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
     <section class="grid3d vertical portfolio" id="portfolio" style="background-color: #f7f7f7">
         <div class="container" style="background-color: #ffffff;
         padding: 25px;
+        height: 100%;
         margin: auto;
         padding: 25px;
         -webkit-box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.08);
