--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                         Não se acanhe! Estamos ansiosos para conhecer o quão especial é o seu negócio! Queremos ver você crescer e o primeiro contato é só o primeiro passo dessa jornada.
                     </p>
 
-                    <div class="row margin-15px-bottom ">
+                    <!--                    <div class="row margin-15px-bottom ">
                         <div class="col-sm-1 no-padding ">
                             <div class="contact-icon text-blue ">
                                 <i class="fa fa-map-marker " aria-hidden="true "></i>
@@ -675,7 +675,7 @@
                         <div class="col-sm-11 ">
                             <p class="text-small ">São José, SC | Manoel Rosa 116 &amp; Avenida das Torres,<br> AP304 BL3 | CEP 88113-835</p>
                         </div>
-                    </div>
+                    </div>-->
 
                     <div class="row margin-15px-bottom ">
                         <div class="col-sm-1 no-padding ">
