--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="css/cubeportfolio.min.css">
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <script src="https://kit.fontawesome.com/49a6544868.js"></script>
-
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 
 <body>
