--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="description" content="Site da empresa SAS">
     <!-- keywords -->
     <meta name="keywords" content="">
-    <title>Nextme</title>
+    <title>.·.S.A.S.·.</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto%7CJosefin+Sans:100,300,400,500" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
