Mudando paleta de cores

--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
     </div>
 
     <!--================== Portfolio section =====================-->
-    <section class="grid3d vertical portfolio" id="portfolio" style="background-color: #f7f7f7">
-        <div class="container" style="background-color: #ffffff;
+    <section class="grid3d vertical portfolio" id="portfolio" style="background-color: #101010">
+        <div class="container" style="background-color: #323232;
         padding: 25px;
         height: 100%;
         margin: auto;
@@ -695,7 +695,7 @@
                             </div>
                         </div>
                         <div class="col-sm-11 xs-margin-50px-bottom ">
-                            <p class="text-small ">sas.floripa@gmail.com<br>https://sasfln.github.io</p>
+                            <p class="text-small ">https://sasfln.github.io</p>
                         </div>
                     </div>
 
