Mudando paleta de cores

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
     <!--================== Features section =====================-->
     <div id="about">
-        <div class="text-center features-caption features">
-            <h3>Bem vindo à SAS!</h3>
+        <div class="text-center features-caption features" style="margin-top: 50px">
+            <h3><br>Bem vindo à SAS!</h3>
             <h4>quem somos e o que a gente faz</h4>
             <p>
                 Somos uma empresa de TI focada em quem movimenta o Brasil de verdade: o pequeno empreendedor. Atuamos na área de TI trabalhando diretamente com as necessidades da pequena empresa e do empreendedor individual. Marketing, web, TI, tudo numa só empresa,
