Ajustando botão de enviar

--- a/index.html
+++ b/index.html
@@ -730,17 +730,17 @@
                     </form>
                     <!-- Ending of ajax contact form -->
                     <!-- Starting of successful form message -->
-                    <!--<div class="row ">
-                    <div class="col-12 ">
-                        <div id="sendmessage " class="alert alert-success contact__msg " style="display: none " role="alert ">
-                            Sua mensagem foi enviada corretamente!
-                        </div>
-                        <div id="errormessage " class="alert alert-error contact__msg " style="display: none " role="alert ">
-                            Epa! Alguma coisa deu errado!
-                        </div>
+                    <div class="row ">
+                        <div class="col-12 ">
+                            <div id="sendmessage" class="alert alert-success contact__msg" style="display: none" role="alert">
+                                Sua mensagem foi enviada corretamente!
+                            </div>
+                            <div id="errormessage" class="alert alert-error contact__msg" style="display: none" role="alert">
+                                Epa! Alguma coisa deu errado!
+                            </div>
 
-                    </div>
-                </div>-->
+                        </div>
+                    </div>-->
                     <!-- Ending of successful form message -->
                 </div>
             </div>
