--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
     <link rel="stylesheet" href="css/cubeportfolio.min.css">
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <script src="https://kit.fontawesome.com/49a6544868.js"></script>
+    <script src="/js/contactform.js "></script>
+    <script src="/js/jquery.min.js "></script>
+    <script src="/js/modernizr.custom.js "></script>
+    <script src="/js/bootstrap.min.js "></script>
+    <script src="/js/slick.min.js "></script>
+    <script src="/js/scrollreveal.min.js "></script>
+    <script src="/js/jquery.cubeportfolio.min.js "></script>
+    <script src="/js/jquery.matchHeight-min.js "></script>
+    <script src="/js/masonry.pkgd.min.js "></script>
+    <script src="/js/jquery.flexslider-min.js "></script>
+    <script src="/js/classie.js "></script>
+    <script src="/js/helper.js "></script>
+    <script src="/js/grid3d.js "></script>
+    <script src="/js/script.js "></script>
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 
@@ -740,7 +754,7 @@
                             </div>
 
                         </div>
-                    </div>-->
+                    </div>
                     <!-- Ending of successful form message -->
                 </div>
             </div>
@@ -764,21 +778,6 @@
 
         <div class="curve curve-top curve-center "></div>
     </footer>
-
-    <script src="/js/contactform.js "></script>
-    <script src="/js/jquery.min.js "></script>
-    <script src="/js/modernizr.custom.js "></script>
-    <script src="/js/bootstrap.min.js "></script>
-    <script src="/js/slick.min.js "></script>
-    <script src="/js/scrollreveal.min.js "></script>
-    <script src="/js/jquery.cubeportfolio.min.js "></script>
-    <script src="/js/jquery.matchHeight-min.js "></script>
-    <script src="/js/masonry.pkgd.min.js "></script>
-    <script src="/js/jquery.flexslider-min.js "></script>
-    <script src="/js/classie.js "></script>
-    <script src="/js/helper.js "></script>
-    <script src="/js/grid3d.js "></script>
-    <script src="/js/script.js "></script>
 
 </body>
 
