Ajustando botão de enviar

--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
 
                 <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0 ">
                     <!-- Starting of ajax contact form -->
-                    <form class="contact__form" method="post" action="https://usebasin.com/f/a79dd3893426">
+                    <form class="contact__form" method="POST" action="https://usebasin.com/f/a79dd3893426.json">
                         <!-- Element of the ajax contact form -->
                         <div class="row" style="margin-top: 40px">
                             <div class="col-md-6 form-group ">
