Ajustando botão de enviar

--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
                             <div class="col-12 form-group">
                                 <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Vai lá, escreve pra gente!" placeholder="Mensagem" required></textarea>
                             </div>
-                            <div class="col-12">
+                            <div class="col-12 form-group">
                                 <input name="submit" type="submit" class="button-style" value="Enviar">
                             </div>
                         </div>
