--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                 </a>
 
                 <div class="social">
-                    <a href="https://www.facebook.com/SAS-442750003221060"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/SAS.tecnologia"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
                 </div>
 
                 <p>&copy; 2019 .·.S.A.S.·. Todos os direitos Reservados</p>
